01-04-2024 23:30pm AppUser can now update the status of the user complaint or demand no issue

--- a/VidhayakApp.Web/Views/AppUser/UpdateOnUserIssuesOnAppUserDashboard.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/UpdateOnUserIssuesOnAppUserDashboard.cshtml
@@ -10,386 +10,33 @@
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
     int? userId = context.Session.GetInt32("UserId");
-   
 }
 <link rel="stylesheet" href="~/css/site.css" />
 
-
-<!DOCTYPE html>
-<!--
-=========================================================
-* Argon Dashboard 2 - v2.0.4
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/argon-dashboard
-* Copyright 2022 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://www.creative-tim.com/license)
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="76x76" href="~/Argon/favicons/img-apple-icon.png">
-    <link rel="icon" type="image/png" href="~/Argon/favicons/img-favicon.png">
-    <title>
-        Argon Dashboard 2 by Creative Tim
-    </title>
-
-
-    <link rel="canonical" href="https://www.creative-tim.com/product/argon-dashboard">
-
-    <meta name="keywords" content="creative tim, html dashboard, html css dashboard, web dashboard, bootstrap 5 dashboard, bootstrap 5, css3 dashboard, bootstrap 5 admin, Argon Dashboard 2 bootstrap 5 dashboard, frontend, responsive bootstrap 5 dashboard, free dashboard, free admin dashboard, free bootstrap 5 admin dashboard">
-    <meta name="description" content="Argon Dashboard 2 is a beautiful Bootstrap 5 admin dashboard with a large number of components, designed to look beautiful and organized. If you are looking for a tool to manage and visualize data about your business, this dashboard is the thing for you.">
-
-    <meta name="twitter:card" content="product">
-@*     <meta name="twitter:site" content="@creativetim"> *@
-    <meta name="twitter:title" content="Argon Dashboard 2 by Creative Tim">
-    <meta name="twitter:description" content="Argon Dashboard 2 is a beautiful Bootstrap 5 admin dashboard with a large number of components, designed to look beautiful and organized. If you are looking for a tool to manage and visualize data about your business, this dashboard is the thing for you.">
-   @*  <meta name="twitter:creator" content="@creativetim"> *@
-    <meta name="twitter:image" content="https://s3.amazonaws.com/creativetim_bucket/products/450/original/opt_sd_free_thumbnail.png">
-
-    <meta property="fb:app_id" content="655968634437471">
-    <meta property="og:title" content="Argon Dashboard 2 by Creative Tim">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="http://demos.creative-tim.com/argon-dashboard/examples/dashboard.html">
-    <meta property="og:image" content="https://s3.amazonaws.com/creativetim_bucket/products/450/original/opt_sd_free_thumbnail.png">
-    <meta property="og:description" content="Argon Dashboard 2 is a beautiful Bootstrap 5 admin dashboard with a large number of components, designed to look beautiful and organized. If you are looking for a tool to manage and visualize data about your business, this dashboard is the thing for you.">
-    <meta property="og:site_name" content="Creative Tim">
-
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-
-    <link href="~/Argon/css/css-nucleo-icons.css" rel="stylesheet">
-    <link href="~/Argon/css/css-nucleo-svg.css" rel="stylesheet">
-
-    <script src="~/Argon/js/42d5adcbca.js" crossorigin="anonymous"></script>
-    <link href="~/Argon/css/css-nucleo-svg.css" rel="stylesheet">
-
-    <link id="pagestyle" href="~/Argon/css/css-argon-dashboard.min.css" rel="stylesheet">
-
-    <style>
-        .async-hide {
-            opacity: 0 !important
-        }
-    </style>
-    <script>
-        (function (a, s, y, n, c, h, i, d, e) {
-            s.className += ' ' + y;
-            h.start = 1 * new Date;
-            h.end = i = function () {
-                s.className = s.className.replace(RegExp(' ?' + y), '')
-            };
-            (a[n] = a[n] || []).hide = h;
-            setTimeout(function () {
-                i();
-                h.end = null
-            }, c);
-            h.timeout = c;
-        })(window, document.documentElement, 'async-hide', 'dataLayer', 4000, {
-            'GTM-K9BGS8K': true
-        });
-    </script>
-
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-46172202-22', 'auto', {
-            allowLinker: true
-        });
-        ga('set', 'anonymizeIp', true);
-        ga('require', 'GTM-K9BGS8K');
-        ga('require', 'displayfeatures');
-        ga('require', 'linker');
-        ga('linker:autoLink', ["2checkout.com", "avangate.com"]);
-    </script>
-
-
-    <script>
-        (function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-NKDMSK6');
-    </script>
-
-</head>
-<body class>
-
-
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NKDMSK6" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-
-
-    <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3 navbar-transparent mt-4">
-        <div class="container">
-          @*   <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="dashboard.html">
-                Argon Dashboard 2
-            </a> *@
-            <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon mt-2">
-                    <span class="navbar-toggler-bar bar1"></span>
-                    <span class="navbar-toggler-bar bar2"></span>
-                    <span class="navbar-toggler-bar bar3"></span>
-                </span>
-            </button>
-            <div class="collapse navbar-collapse" id="navigation">
-                @* <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="dashboard.html">
-                            <i class="fa fa-chart-pie opacity-6  me-1"></i>
-                            Dashboard
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-2" href="profile.html">
-                            <i class="fa fa-user opacity-6  me-1"></i>
-                            Profile
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-2" href="sign-up.html">
-                            <i class="fas fa-user-circle opacity-6  me-1"></i>
-                            Sign Up
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-2" href="sign-in.html">
-                            <i class="fas fa-key opacity-6  me-1"></i>
-                            Sign In
-                        </a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav d-lg-block d-none">
-                    <li class="nav-item">
-                        <a href="https://www.creative-tim.com/product/argon-dashboard" class="btn btn-sm mb-0 me-1 bg-gradient-light">Free Download</a>
-                    </li>
-                </ul> *@
-            </div>
-        </div>
-    </nav>
-
-    <main class="main-content  mt-0">
-        <div class="page-header align-items-start min-vh-50 pt-5 border-radius-lg" >
-           @*  <span class="mask bg-gradient-dark opacity-6"></span> *@
-            <div class="container">
-                <div class="row justify-content-center">
-                   
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
-                <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
-                    <div class="card z-index-0">
-                        <div class="card-header text-center pt-4">
-                            <h5>Status and Note Update</h5>
-                        </div>
-                        <div class="row px-xl-5 px-sm-4 px-3">
-                            <div class="col-3 ms-auto px-1">
-                                                            </div>
-                            <div class="col-3 px-1">
-                                
-                            </div>
-                            <div class="col-3 me-auto px-1">
-                                
-                            </div>
-                          
-                        </div>
-                        <div class="card-body">
-                            <form method="post">
-                                <div class="mb-3">
-                                    <label asp-for="UserName" class="control-label"></label>
-                                    <input asp-for="UserName" class="form-control" readonly />
-                                </div>
-                                <div class="mb-3">
-                                    <!-- Include AppUserId as a hidden input -->
-                                    <input asp-for="AppUserId" type="hidden" name="AppUserId" value="@context.Session.GetInt32("UserId")" />
-                                </div>
-                                <div class="mb-3">
-                                    <label asp-for="Status" class="control-label"></label>
-                                    <select asp-for="Status" class="form-control">
-                                        <option value="@StatusType.Pending">Pending</option>
-                                        <option value="@StatusType.InProgress">In Progress</option>
-                                        <option value="@StatusType.Fixed">Fixed</option>
-                                        <option value="@StatusType.Completed">Completed</option>
-                                        <option value="@StatusType.Rejected">Rejected</option>
-                                    </select>
-                                </div>
-                                <div class="mb-3">
-                                    <label asp-for="Note" class="control-label"></label>
-                                    <textarea asp-for="Note" class="form-control"></textarea>
-                                </div>
-                                
-                                <div class="text-center">
-                                    <button asp-action="UpdateOnUserIssuesOnAppUserDashboard" asp-controller="AppUser" type="submit" class="btn btn-primary">Save</button>
-                            </form>
-                        </div>
-                             
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    @* <footer class="footer py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mb-4 mx-auto text-center">
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Company
-                    </a>
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        About Us
-                    </a>
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Team
-                    </a>
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Products
-                    </a>
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Blog
-                    </a>
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Pricing
-                    </a>
-                </div>
-                <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-4 me-4">
-                        <span class="text-lg fab fa-dribbble"></span>
-                    </a>
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-4 me-4">
-                        <span class="text-lg fab fa-twitter"></span>
-                    </a>
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-4 me-4">
-                        <span class="text-lg fab fa-instagram"></span>
-                    </a>
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-4 me-4">
-                        <span class="text-lg fab fa-pinterest"></span>
-                    </a>
-                    <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-4 me-4">
-                        <span class="text-lg fab fa-github"></span>
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-8 mx-auto text-center mt-1">
-                    <p class="mb-0 text-secondary">
-                        Copyright &copy; <script>
-                                             document.write(new Date().getFullYear())
-                        </script> Soft by Creative Tim.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer> *@
-
-
-    <script src="~/Argon/js/core-popper.min.js"></script>
-    <script src="~/Argon/js/core-bootstrap.min.js"></script>
-    <script src="~/Argon/js/plugins-perfect-scrollbar.min.js"></script>
-    <script src="~/Argon/ns-smooth-scrollbar.min.js"></script>
-    <script>
-        var win = navigator.platform.indexOf('Win') > -1;
-        if (win && document.querySelector('#sidenav-scrollbar')) {
-            var options = {
-                damping: '0.5'
-            }
-            Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
-        }
-    </script>
-
-    <script async defer src="js/buttons.github.io-buttons.js"></script>
-
-    <script src="js/js-argon-dashboard.min.js"></script>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@* <div class="card text-center">
-    <div class="card-header">
-        Update Status
-    </div>
-    <div class="card-body">
-        @* <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a> *@
-
-
-@*    <form method="post" asp-action="UpdateOnUserIssuesOnAppUserDashboard">
-       
-        <div class="form-group">
-           
-        </div>
-        <div class="form-group">
-            <!-- Include AppUserId as a hidden input -->
+<form method="post" asp-action="UpdateOnUserIssuesOnAppUserDashboard">
+    <div class="form-group">
+        <label asp-for="UserName" class="control-label"></label>
+        @* <input asp-for="UserName" class="form-control" readonly value="@Model.UserName" />
+    *@ </div>
+    <div class="form-group">
+        <!-- Include ItemId as a hidden input -->
+        <input asp-for="ItemId" type="hidden" name="ItemId" value="@Model.ItemId" />
         <input asp-for="AppUserId" type="hidden" name="AppUserId" value="@context.Session.GetInt32("UserId")" />
-        </div>
-        <div class="form-group">
-            
-        </div>
-        <div class="form-group">
-            <label asp-for="Note" class="control-label"></label>
-            <textarea asp-for="Note" class="form-control"></textarea>
-        </div>
-  
-
-  
-    <div class="card-footer text-muted">
-        <button asp-action="UpdateOnUserIssuesOnAppUserDashboard" asp-controller="AppUser" type="submit" class="btn btn-primary">Save</button>
-    </form>
-        
     </div>
-</div>
- *@
+    <div class="form-group">
+        <label asp-for="Status" class="control-label"></label>
+        <select asp-for="Status" class="form-control">
+            <option value="@StatusType.Pending">Pending</option>
+            <option value="@StatusType.InProgress">In Progress</option>
+            <option value="@StatusType.Fixed">Fixed</option>
+            <option value="@StatusType.Completed">Completed</option>
+            <option value="@StatusType.Rejected">Rejected</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label asp-for="Note" class="control-label"></label>
+        <textarea asp-for="Note" class="form-control"></textarea>
+    </div>
+
+    <button asp-action="UpdateOnUserIssuesOnAppUserDashboard" asp-controller="AppUser" type="submit" class="btn btn-primary">Save</button>
+</form>
