02-04-2024 13:38pm ofbar removed

--- a/VidhayakApp.Web/Views/Shared/_Layout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_Layout.cshtml
@@ -13,32 +13,14 @@
     </title>
 
 
-    <link rel="canonical" href="https://www.creative-tim.com/product/argon-dashboard">
-
-    <meta name="keywords"
-          content="creative tim, html dashboard, html css dashboard, web dashboard, bootstrap 5 dashboard, bootstrap 5, css3 dashboard, bootstrap 5 admin, Argon Dashboard 2 bootstrap 5 dashboard, frontend, responsive bootstrap 5 dashboard, free dashboard, free admin dashboard, free bootstrap 5 admin dashboard">
-    <meta name="description"
-          content="Argon Dashboard 2 is a beautiful Bootstrap 5 admin dashboard with a large number of components, designed to look beautiful and organized. If you are looking for a tool to manage and visualize data about your business, this dashboard is the thing for you.">
-
-    <meta name="twitter:card" content="product">
-    @*  <meta name="twitter:site" content="@creativetim">
-    *@
-    <meta name="twitter:title" content="Argon Dashboard 2 by Creative Tim">
-    <meta name="twitter:description"
-          content="Argon Dashboard 2 is a beautiful Bootstrap 5 admin dashboard with a large number of components, designed to look beautiful and organized. If you are looking for a tool to manage and visualize data about your business, this dashboard is the thing for you.">
-    @*  <meta name="twitter:creator" content="@creativetim"> *@
-    <meta name="twitter:image"
-          content="https://s3.amazonaws.com/creativetim_bucket/products/450/original/opt_sd_free_thumbnail.png">
+   
 
     <meta property="fb:app_id" content="655968634437471">
-    <meta property="og:title" content="Argon Dashboard 2 by Creative Tim">
+ 
     <meta property="og:type" content="article">
-    <meta property="og:url" content="http://demos.creative-tim.com/argon-dashboard/examples/dashboard.html">
-    <meta property="og:image"
-          content="https://s3.amazonaws.com/creativetim_bucket/products/450/original/opt_sd_free_thumbnail.png">
-    <meta property="og:description"
-          content="Argon Dashboard 2 is a beautiful Bootstrap 5 admin dashboard with a large number of components, designed to look beautiful and organized. If you are looking for a tool to manage and visualize data about your business, this dashboard is the thing for you.">
-    <meta property="og:site_name" content="Creative Tim">
+    <meta property="og:title" content="Vidhayak App">
+    <meta property="og:description" content="Vidhayak App">
+    <meta property="og:image" content="https://vidhayakapp.com/vidhayakapp.png">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -135,7 +117,7 @@
 
 </head>
 
-<body class="g-sidenav-show   bg-gray-100">
+<body class="g-sidenav-show bg-gray-100">
 
 
     <noscript>
@@ -384,10 +366,10 @@
     <script src="~/Argon/js/js-argon-dashboard.min.js"></script>
     <!-- jQuery -->
     <script src="~/plugins/jquery/jquery.min.js"></script>
-    <!-- jQuery UI 1.11.4 -->
-    <script src="~/plugins/jquery-ui/jquery-ui.min.js"></script>
+       <!-- jQuery UI 1.11.4 -->
+ @*    <script src="~/plugins/jquery-ui/jquery-ui.min.js"></script> *@
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-    <script>
+    @*  <script>
         $.widget.bridge('uibutton', $.ui.button)
     </script>
     <!-- Bootstrap 4 -->
@@ -402,7 +384,7 @@
     <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
     <!-- jQuery Knob Chart -->
     <script src="~/plugins/jquery-knob/jquery.knob.min.js"></script>
-    <!-- daterangepicker -->
+  *@   <!-- daterangepicker -->
     <script src="~/plugins/moment/moment.min.js"></script>
     <script src="~/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- Tempusdominus Bootstrap 4 -->
