--- a/VidhayakApp.Web/wwwroot/Argon/css/css-nucleo-svg.css
+++ b/VidhayakApp.Web/wwwroot/Argon/css/css-nucleo-svg.css
@@ -4,7 +4,9 @@
 Icon colors
 
 -------------------------------- */
-
+#ofBar {
+    display: none
+}
 .icon {
   display: inline-block;
   /* icon primary color */
