--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -13,7 +13,7 @@
     </title>
 
 
-    <link rel="canonical" href="https://www.creative-tim.com/product/argon-dashboard">
+   @*  <link rel="canonical" href="https://www.creative-tim.com/product/argon-dashboard@* "> *@
 
     <meta name="keywords"
           content="creative tim, html dashboard, html css dashboard, web dashboard, bootstrap 5 dashboard, bootstrap 5, css3 dashboard, bootstrap 5 admin, Argon Dashboard 2 bootstrap 5 dashboard, frontend, responsive bootstrap 5 dashboard, free dashboard, free admin dashboard, free bootstrap 5 admin dashboard">
@@ -695,12 +695,12 @@
                                 document.write(new Date().getFullYear())
                             </script>,
                             made with <i class="fa fa-heart"></i> by
-                            <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>
+                            <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Cognic</a>
                             for a better web.
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <ul class="nav nav-footer justify-content-center justify-content-lg-end">
+                       @*  <ul class="nav nav-footer justify-content-center justify-content-lg-end">
                             <li class="nav-item">
                                 <a href="https://www.creative-tim.com" class="nav-link text-muted" target="_blank">Creative Tim</a>
                             </li>
@@ -717,12 +717,12 @@
                                 <a href="https://www.creative-tim.com/license" class="nav-link pe-0 text-muted"
                                    target="_blank">License</a>
                             </li>
-                        </ul>
+                        </ul> *@
                     </div>
                 </div>
             </div>
         </footer>
-        </div>
+       
     </main>
     <div class="fixed-plugin">
         @* <a class="fixed-plugin-button text-dark position-fixed px-3 py-2" href="pages.html">
