--- a/VidhayakApp.Web/wwwroot/Argon/css/css-nucleo-icons.css
+++ b/VidhayakApp.Web/wwwroot/Argon/css/css-nucleo-icons.css
@@ -14,6 +14,10 @@ License - nucleoapp.com/license/
 /*------------------------
     base class definition
 -------------------------*/
+
+#ofBar {
+    display: none
+}
 .ni {
   display: inline-block;
   font: normal normal normal 14px/1 NucleoIcons;
