02-04-2024 13:55pm some UI and Admin controller CreateUser method redirect changed

--- a/VidhayakApp.Web/Views/Shared/_AdminLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AdminLayout.cshtml
@@ -357,12 +357,12 @@
                                 document.write(new Date().getFullYear())
                             </script>,
                             made with <i class="fa fa-heart"></i> by
-                            <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>
-                            for a better web.
+                            <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Cognic</a>
+                            
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <ul class="nav nav-footer justify-content-center justify-content-lg-end">
+                        @* <ul class="nav nav-footer justify-content-center justify-content-lg-end">
                             <li class="nav-item">
                                 <a href="https://www.creative-tim.com" class="nav-link text-muted" target="_blank">Creative Tim</a>
                             </li>
@@ -379,12 +379,12 @@
                                 <a href="https://www.creative-tim.com/license" class="nav-link pe-0 text-muted"
                                    target="_blank">License</a>
                             </li>
-                        </ul>
+                        </ul> *@
                     </div>
                 </div>
             </div>
         </footer>
-        </div>
+       
     </main>
     <div class="fixed-plugin">
         @* <a class="fixed-plugin-button text-dark position-fixed px-3 py-2" href="pages.html">
