--- a/VidhayakApp.Web/Views/AppUser/Demand.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Demand.cshtml
@@ -53,6 +53,7 @@
             <table>
                 <thead>
                     <tr>
+                            <th>Id <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Name <span class="icon-arrow">&UpArrow;</span></th>
                         <th>UserName <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Mobile <span class="icon-arrow">&UpArrow;</span></th>
@@ -74,6 +75,7 @@
                     {
                  
                         <tr>
+                            <td>@(userDetail.ItemId)</td>
                             <td>@(userDetail.Name ?? "")</td>
                             <td>@(userDetail.UserName ?? "")</td>
                             <td>@(userDetail.MobileNumber ?? "")</td>
@@ -88,7 +90,7 @@
                             <td>@(userDetail.Status)</td>
                             <td>@(userDetail.Note ?? "")</td>
                             <td>
-                                    <a asp-controller="AppUser" asp-action="UpdateOnUserIssuesOnAppUserDashboard" asp-route-id="@userDetail.UserId" class="edit"><center><i class="fa-sharp fa-solid fa-wrench"></i></center></a>
+                                    <a asp-controller="AppUser" asp-action="UpdateOnUserIssuesOnAppUserDashboard" asp-route-id="@userDetail.ItemId" class="edit"><center><i class="fa-sharp fa-solid fa-wrench"></i></center></a>
                             </td>
                         </tr>
                     }
