02-04-2024 17:06pm recently added records appears first

--- a/VidhayakApp.Web/Views/AppUser/Demand.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Demand.cshtml
@@ -53,7 +53,7 @@
             <table>
                 <thead>
                     <tr>
-                            <th>Id <span class="icon-arrow">&UpArrow;</span></th>
+                           @*  <th>Id <span class="icon-arrow">&UpArrow;</span></th> *@
                         <th>Name <span class="icon-arrow">&UpArrow;</span></th>
                         <th>UserName <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Mobile <span class="icon-arrow">&UpArrow;</span></th>
@@ -75,7 +75,7 @@
                     {
                  
                         <tr>
-                            <td>@(userDetail.ItemId)</td>
+                         @*    <td>@(userDetail.ItemId)</td> *@
                             <td>@(userDetail.Name ?? "")</td>
                             <td>@(userDetail.UserName ?? "")</td>
                             <td>@(userDetail.MobileNumber ?? "")</td>
