--- a/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
@@ -60,7 +60,7 @@
                         <div class="icon">
                             <i class="ion ion-bag"></i>
                         </div>
-                        @* <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> *@
+                         <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
                     </div>
                 </div>
                 <div class="col-lg-3 col-6">
@@ -73,7 +73,7 @@
                         <div class="icon">
                             <i class="ion ion-bag"></i>
                         </div>
-                        @* <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> *@
+                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
                     </div>
                 </div>
             <div class="col-lg-3 col-6">
@@ -86,7 +86,7 @@
                     <div class="icon">
                         <i class="ion ion-bag"></i>
                     </div>
-                    @* <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> *@
+                     <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
                 </div>
             </div>
 
@@ -100,7 +100,7 @@
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                  @*   <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> *@
+                     <a asp-action="DepartmentsCard" asp-controller="AppUser" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
                         </div>
-                        @*   <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> *@
+                           <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
                     </div>
                 </div>
 
@@ -128,7 +128,7 @@
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
                         </div>
-                        @*   <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> *@
+                           <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
                     </div>
                 </div>
 
@@ -142,7 +142,7 @@
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
                     </div>
-                    @* <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> *@
+                     <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
                 </div>
             </div>
 
@@ -156,7 +156,7 @@
                     <div class="icon">
                         <i class="ion ion-pie-graph"></i>
                     </div>
-                   @*  <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> *@
+                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
                 </div>
             </div>
 
