--- a/VidhayakApp.Web/Views/Form/Form.cshtml
+++ b/VidhayakApp.Web/Views/Form/Form.cshtml
@@ -40,7 +40,7 @@
                                         <option selected="" value="">Select...</option>
                                         <option value="@ItemType.Demand">Demand</option>
                                         <option value="@ItemType.Complaint">Complaint</option>
-                                        <option value="@ItemType.Suggestion">Suggession</option>
+                                        <option value="@ItemType.Suggestion">Suggestion</option>
                                     </select>
                                 </div>
                                
@@ -174,6 +174,18 @@
                                     <div class="text-center">
                                         <button asp-action="CreateDemand" asp-controller="Form" class="btn btn-primary col-sm-12" id="submitDemandId" type="submit">Submit Demand</button>
                                     </div>
+                                </div>
+                                        <div id="suggestionForm" style="display: none;">
+                                            <!-- Suggestion form fields -->
+                                            <div class="form-group">
+                                                <label>Suggestion</label>
+                                                <textarea asp-for="Description" id="suggestionId" class="form-control" rows="3" placeholder="Enter your suggestion..."></textarea>
+                                            </div>
+
+                                            <div class="text-center">
+                                                 <button asp-action="CreateSuggestion" asp-controller="Form" class="btn btn-primary col-sm-12" id="submitSuggestionId" type="submit">Submit Suggestion</button>
+                                            </div>
+                                       
                                 </div>
                             </form>
                         </div>
