--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -100,9 +100,13 @@
                                 {
                                     <p class="status shipped">InProgress</p>
                                 }
-                                else if (item.Status == StatusType.Fixed)
+                                else if (item.Status == StatusType.Open)
                                 {
-                                    <p class="status shipped">Fixed</p>
+                                    <p class="status shipped">Open</p>
+                                }
+                                else if (item.Status == StatusType.Closed)
+                                {
+                                    <p class="status delivered">Closed</p>
                                 }
                                 else if (item.Status == StatusType.Completed)
                                 {
