--- a/VidhayakApp.Web/Views/User/Suggession.cshtml
+++ b/VidhayakApp.Web/Views/User/Suggession.cshtml
@@ -2,7 +2,7 @@
 
 
 @{
-    ViewData["Title"] = "Sugession";
+    ViewData["Title"] = "Suggestion";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
