--- a/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
@@ -1,5 +1,7 @@
 ﻿@using VidhayakApp.Web.ViewModels.AppUser
-@model IEnumerable<UserDetailAndFormDetailOnAppUserDashboardViewModel>
+@using PagedList.Mvc;
+@using PagedList;
+@model IPagedList<UserDetailAndFormDetailOnAppUserDashboardViewModel>
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 @{
@@ -97,6 +99,7 @@
                     }
               
                 </tbody>
+                @* @Html.PagedListPager(Model, page => Url.Action("ListUsers", new { page = page }), "Pager") *@
             </table>
         </section>
     </main>
