--- a/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
@@ -60,8 +60,8 @@
                         <div class="icon">
                             <i class="ion ion-bag"></i>
                         </div>
-                         <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
-                    </div>
+                        @*  <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
+                  *@   </div>
                 </div>
                 <div class="col-lg-3 col-6">
 
@@ -73,8 +73,8 @@
                         <div class="icon">
                             <i class="ion ion-bag"></i>
                         </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
-                    </div>
+                     @*    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
+                   *@  </div>
                 </div>
             <div class="col-lg-3 col-6">
 
@@ -86,8 +86,8 @@
                     <div class="icon">
                         <i class="ion ion-bag"></i>
                     </div>
-                     <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
-                </div>
+                  @*    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
+                *@ </div>
             </div>
 
             <div class="col-lg-3 col-6">
@@ -100,8 +100,8 @@
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                     <a asp-action="DepartmentsCard" asp-controller="AppUser" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                </div>
+                 @*     <a asp-action="DepartmentsCard" asp-controller="AppUser" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                 *@</div>
             </div>
 
                 <div class="col-lg-3 col-6">
@@ -114,8 +114,8 @@
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
                         </div>
-                           <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
-                    </div>
+                 @*           <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
+                 *@    </div>
                 </div>
 
                 <div class="col-lg-3 col-6">
@@ -128,8 +128,8 @@
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
                         </div>
-                           <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
-                    </div>
+                        @*    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
+                *@     </div>
                 </div>
 
             <div class="col-lg-3 col-6">
@@ -142,8 +142,8 @@
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
                     </div>
-                     <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
-                </div>
+                 @*     <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
+              *@   </div>
             </div>
 
             <div class="col-lg-3 col-6">
@@ -156,8 +156,8 @@
                     <div class="icon">
                         <i class="ion ion-pie-graph"></i>
                     </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
-                </div>
+              @*       <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a> 
+              *@   </div>
             </div>
 
         </div>
