--- a/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
@@ -182,6 +182,14 @@
                         <span class="nav-link-text ms-1">Demand</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-action="Suggestion" asp-controller="AppUser">
+                        <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                            <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
+                        </div>
+                        <span class="nav-link-text ms-1">Suggestion</span>
+                    </a>
+                </li>
                 @*<li class="nav-item">
                     <a class="nav-link" asp-action="Demand" asp-controller="AppUser">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
