05-04-2024 14:02pm added Pagination in all tables of AppUser and changed Admin dashboard not major change

--- a/VidhayakApp.Web/Views/Admin/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/Admin/Dashboard.cshtml
@@ -92,7 +92,7 @@
                 <div class="small-box bg-success">
                     <div class="inner">
                         <h3>@Model.TotalComplaintsCount<sup style="font-size: 20px"></sup></h3>
-                        <p>Complaints</p>
+                        <p>Total Complaints</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
@@ -106,7 +106,7 @@
                     <div class="small-box bg-success">
                         <div class="inner">
                             <h3>@Model.TotalDemandsCount<sup style="font-size: 20px"></sup></h3>
-                            <p>Demands</p>
+                                <p> Total Demands</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
@@ -120,7 +120,7 @@
                     <div class="small-box bg-success">
                         <div class="inner">
                             <h3>@Model.TotalSuggestionsCount<sup style="font-size: 20px"></sup></h3>
-                            <p>Suggessions</p>
+                                <p>Total Suggessions</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
@@ -134,7 +134,7 @@
                 <div class="small-box bg-warning">
                     <div class="inner">
                         <h3>@Model.UsersTotalCount</h3>
-                        <p>User Registrations</p>
+                                <p> Total User Registrations</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
@@ -148,7 +148,7 @@
                 <div class="small-box bg-danger">
                     <div class="inner">
                         <h3>@Model.UsersInWardCount</h3>
-                        <p>No. of Users In My Ward</p>
+                                <p>Total No. of Users In My Ward</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-pie-graph"></i>
