--- a/VidhayakApp.Web/Views/Account/Login.cshtml
+++ b/VidhayakApp.Web/Views/Account/Login.cshtml
@@ -240,7 +240,7 @@
                                 </div>
                                
                                 <div class="mb-3">
-                                    <input asp-for="Password" type="text" class="form-control" id="Password" placeholder="Password">
+                                    <input asp-for="Password" type="password" class="form-control" id="Password" placeholder="Password">
                                     <span class="text-danger">@Html.ValidationMessageFor(m => m.Password)</span>
                                     <i class='bx bxs-lock-alt'></i>
                                 </div>
