--- a/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
@@ -62,7 +62,7 @@
                         <th>UserName <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Mobile <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Address <span class="icon-arrow">&UpArrow;</span></th>
-                        <th>Type <span class="icon-arrow">&UpArrow;</span></th>
+                     
                         <th>Sub Category <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Department Name <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Title <span class="icon-arrow">&UpArrow;</span></th>
@@ -85,7 +85,7 @@
                             <td>@(userDetail.UserName ?? "")</td>
                             <td>@(userDetail.MobileNumber ?? "")</td>
                             <td>@(userDetail.Address ?? "")</td>
-                            <td>@(userDetail.Type )</td>
+                        
                             <td>@(userDetail.SubCategory)</td>
                             <td>@(userDetail.DepartmentName ?? "")</td>
                             <td>@(userDetail.Title ?? "")</td>
@@ -101,8 +101,18 @@
                     }
               
                 </tbody>
+                    
+            
+            </table>
                     <div>
-                        @Html.PagedListPager(Model, page => Url.Action("Complaint", new { pageId = page }), new PagedListRenderOptions { DisplayLinkToFirstPage = PagedListDisplayMode.Always, DisplayLinkToLastPage = PagedListDisplayMode.Always, DisplayPageCountAndCurrentLocation = true })
+                        @Html.PagedListPager(Model, page => Url.Action("Complaint", new { pageId = page }), new PagedListRenderOptions
+                       {
+                           // DisplayLinkToFirstPage = PagedListDisplayMode.Always,
+                           // DisplayLinkToLastPage = PagedListDisplayMode.Always,
+                           // DisplayPageCountAndCurrentLocation = true,
+                           LiElementClasses = new string[] { "page-item" },
+                           PageClasses = new string[] { "page-link" },
+                       })
                    @*
                        the parameter name inside the method should always be the same as here
                        
@@ -114,9 +124,6 @@
                    *@
                     
                     </div>
-                    
-            
-            </table>
         </section>
     </main>
     <script src="~/js/UserDashboardTable.js"></script>
